fix: align button and set maximum page scale

--- a/src/TaskListItem.module.css
+++ b/src/TaskListItem.module.css
@@ -59,6 +59,8 @@
 }
 
 .item button {
+  display: flex;
+  margin-left: auto;
   border: 0;
   color: var(--gray-300);
   background: transparent;
@@ -69,8 +71,4 @@
 
 .item button:hover {
   color: var(--danger);
-}
-
-.item svg {
-  margin-left: auto;
 }
